<resources>
    <string name="app_name">UnJumble</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">UnJumble</string>
    <string name="txt_jumbledword">Enter a jumbled word</string>
    <string name="btn_go">Go</string>
    <string name="hint_search">Enter a jumbled word</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear">Clear results</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About this app</string>
    <string name="pref_fetch_meaning_title">Display meanings</string>
    <string name="pref_fetch_meaning_summ">Fetch meanings of unjumbled word suggestions from Wordnik (an online service). An active Internet connection is required.</string>
    <string name="text_nothing_found">nothing; there\'s no such word!</string>
    <string name="text_empty">Let\'s get unjumbling</string>
    <string name="text_meaning_not_found">Meaning not found</string>
    <string name="text_copy_success">Word copied to clipboard</string>
    <string name="text_could_mean">could mean</string>
    <string name="text_app_logo">App Logo</string>
    <string name="text_wordnik_poweredby">Powered by Wordnik</string>
</resources>