<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="98"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="99"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="always|collapseActionView"
          android:actionViewClass="android.widget.SearchView" />
    
    <item android:id="@+id/menu_clear"
          android:title="@string/menu_clear"
          android:icon="@drawable/ic_action_clear"
          android:showAsAction="ifRoom|collapseActionView" />
    
    <item android:id="@+id/menu_exit"
          android:title="@string/menu_exit"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:visible="false" />
</menu>
